==> TeamRhaegal/Road-Analysis-Project/Ressources_Test_Project/discovery/AHRS/stm32f3_discovery_lsm303dlhc.c <==
#include "stm32f3_discovery_lsm303dlhc.h"

uint16_t LSM303DLHC_Write(uint8_t DeviceAddr, uint8_t RegAddr, uint8_t* pBuffer)
{  
	/* Test on BUSY Flag */
	HAL_StatusTypeDef ret;
	LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;

	ret = HAL_I2C_Master_Transmit(&hi2c1, DeviceAddr, &RegAddr, 1, LSM303DLHC_Timeout);

	if (ret == HAL_OK )
	{
		ret = HAL_I2C_Master_Transmit(&hi2c1, DeviceAddr,pBuffer, 1, LSM303DLHC_Timeout);
	}

	//  while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_BUSY) != RESET)
	//  {
	//    if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//  }
	//
	//  /* Configure slave address, nbytes, reload, end mode and start or stop generation */
	//  I2C_TransferHandling(LSM303DLHC_I2C, DeviceAddr, 1, I2C_Reload_Mode, I2C_Generate_Start_Write);
	//
	//  /* Wait until TXIS flag is set */
	//  LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//  while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_TXIS) == RESET)
	//  {
	//    if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//  }
	//
	//  /* Send Register address */
	//  I2C_SendData(LSM303DLHC_I2C, (uint8_t) RegAddr);
	//
	//  /* Wait until TCR flag is set */
	//  LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//  while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_TCR) == RESET)
	//  {
	//    if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//  }
	//
	//  /* Configure slave address, nbytes, reload, end mode and start or stop generation */
	//  I2C_TransferHandling(LSM303DLHC_I2C, DeviceAddr, 1, I2C_AutoEnd_Mode, I2C_No_StartStop);
	//
	//  /* Wait until TXIS flag is set */
	//  LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//  while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_TXIS) == RESET)
	//  {
	//    if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//  }
	//
	//  /* Write data to TXDR */
	//  I2C_SendData(LSM303DLHC_I2C, *pBuffer);
	//
	//  /* Wait until STOPF flag is set */
	//  LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//  while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_STOPF) == RESET)
	//  {
	//    if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//  }
	//
	//  /* Clear STOPF flag */
	//  I2C_ClearFlag(LSM303DLHC_I2C, I2C_ICR_STOPCF);

	if (ret == HAL_OK) return LSM303DLHC_OK;
	else return LSM303DLHC_FAIL;
}

uint16_t LSM303DLHC_Read(uint8_t DeviceAddr, uint8_t RegAddr, uint8_t* pBuffer, uint16_t NumByteToRead)
{    
	/* Test on BUSY Flag */
	HAL_StatusTypeDef ret;
	LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//	while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_BUSY) != RESET)
	//	{
	//		if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//	}
	//
	//	/* Configure slave address, nbytes, reload, end mode and start or stop generation */
	//	I2C_TransferHandling(LSM303DLHC_I2C, DeviceAddr, 1, I2C_SoftEnd_Mode, I2C_Generate_Start_Write);
	//
	//	/* Wait until TXIS flag is set */
	//	LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//	while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_TXIS) == RESET)
	//	{
	//		if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//	}
	//
	//	if(NumByteToRead>1)
	//		RegAddr |= 0x80;
	//
	//
	//	/* Send Register address */
	//	I2C_SendData(LSM303DLHC_I2C, (uint8_t)RegAddr);
	//
	//	/* Wait until TC flag is set */
	//	LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//	while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_TC) == RESET)
	//	{
	//		if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//	}
	//
	//	/* Configure slave address, nbytes, reload, end mode and start or stop generation */
	//	I2C_TransferHandling(LSM303DLHC_I2C, DeviceAddr, NumByteToRead, I2C_AutoEnd_Mode, I2C_Generate_Start_Read);
	//
	//	/* Wait until all data are received */
	//	while (NumByteToRead)
	//	{
	//		/* Wait until RXNE flag is set */
	//		LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//		while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_RXNE) == RESET)
	//		{
	//			if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//		}
	//
	//		/* Read data from RXDR */
	//		*pBuffer = I2C_ReceiveData(LSM303DLHC_I2C);
	//		/* Point to the next location where the byte read will be saved */
	//		pBuffer++;
	//
	//		/* Decrement the read bytes counter */
	//		NumByteToRead--;
	//	}
	//
	//	/* Wait until STOPF flag is set */
	//	LSM303DLHC_Timeout = LSM303DLHC_LONG_TIMEOUT;
	//	while(I2C_GetFlagStatus(LSM303DLHC_I2C, I2C_ISR_STOPF) == RESET)
	//	{
	//		if((LSM303DLHC_Timeout--) == 0) return LSM303DLHC_TIMEOUT_UserCallback();
	//	}
	//
	//	/* Clear STOPF flag */
	//	I2C_ClearFlag(LSM303DLHC_I2C, I2C_ICR_STOPCF);
	//
	//	/* If all operations OK */

	if(NumByteToRead>1)
		RegAddr |= 0x80;

	ret = HAL_I2C_Master_Transmit(&hi2c1, DeviceAddr, &RegAddr, 1, LSM303DLHC_Timeout);

	if (ret == HAL_OK )
	{
		ret = HAL_I2C_Master_Receive(&hi2c1, DeviceAddr,pBuffer, NumByteToRead, LSM303DLHC_Timeout);
	}

	if (ret == HAL_OK) return LSM303DLHC_OK;
	else return LSM303DLHC_FAIL;
}

static void LSM303DLHC_LowLevel_Init(void)
{
	GPIO_InitTypeDef   GPIO_InitStructure;
	/* Enable GPIOE clock */
	__HAL_RCC_GPIOE_CLK_ENABLE();

	/* Configure Accelero IRQ (DRDY), connected to PE6 IOs in External Interrupt Mode with Rising edge trigger detection. */
	GPIO_InitStructure.Pin = LSM303DLHC_DRDY_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_IT_RISING;
	GPIO_InitStructure.Pull = GPIO_PULLUP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(LSM303DLHC_DRDY_GPIO_PORT, &GPIO_InitStructure);

	/* Enable and set EXTI2 Interrupt to the lowest priority */
//	HAL_NVIC_SetPriority(EXTI2_TSC_IRQn, 2, 0);
//	HAL_NVIC_EnableIRQ(EXTI2_TSC_IRQn);
//
//	HAL_NVIC_SetPriority(EXTI1_IRQn, 2, 0);
//	HAL_NVIC_EnableIRQ(EXTI1_IRQn);
//
//	LSM303DLHC_I2C_INT1_GPIO_CLK();
//	LSM303DLHC_I2C_INT2_GPIO_CLK();

	/* Configure GPIO PINs to detect Interrupts */
	GPIO_InitStructure.Pin = LSM303DLHC_I2C_INT1_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(LSM303DLHC_I2C_INT1_GPIO_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = LSM303DLHC_I2C_INT2_PIN;
	HAL_GPIO_Init(LSM303DLHC_I2C_INT2_GPIO_PORT, &GPIO_InitStructure);

	HAL_I2C_DeInit(&hi2c1);

	hi2c1.Instance = I2C1;
	//hi2c1.Init.Timing = 0x2000090E;
	hi2c1.Init.Timing = 0x00000404;
	hi2c1.Init.OwnAddress1 = 0;
	hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
	hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
	hi2c1.Init.OwnAddress2 = 0;
	hi2c1.Init.OwnAddress2Masks = I2C_OA2_NOMASK;
	hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
	hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
	if (HAL_I2C_Init(&hi2c1) != HAL_OK)
	{
		_Error_Handler(__FILE__, __LINE__);
	}

	/**Configure Analog filter
	 */
	if (HAL_I2CEx_ConfigAnalogFilter(&hi2c1, I2C_ANALOGFILTER_ENABLE) != HAL_OK)
	{
		_Error_Handler(__FILE__, __LINE__);
	}

	/**Configure Digital filter
	 */
	if (HAL_I2CEx_ConfigDigitalFilter(&hi2c1, 0) != HAL_OK)
	{
		_Error_Handler(__FILE__, __LINE__);
	}


	//	GPIO_InitTypeDef GPIO_InitStructure;
	//	EXTI_InitTypeDef EXTI_InitStructure;
	//	I2C_InitTypeDef  I2C_InitStructure;
	//
	//	/* Enable the I2C periph */
	//	RCC_APB1PeriphClockCmd(LSM303DLHC_I2C_CLK, ENABLE);
	//
	//	/* Enable SCK and SDA GPIO clocks */
	//	RCC_AHBPeriphClockCmd(LSM303DLHC_I2C_SCK_GPIO_CLK | LSM303DLHC_I2C_SDA_GPIO_CLK , ENABLE);
	//
	//	/* Enable INT1 GPIO clock */
	//	RCC_AHBPeriphClockCmd(LSM303DLHC_I2C_INT1_GPIO_CLK, ENABLE);
	//
	//	/* Enable INT2 GPIO clock */
	//	RCC_AHBPeriphClockCmd(LSM303DLHC_I2C_INT2_GPIO_CLK, ENABLE);
	//
	//	/* Enable DRDY clock */
	//	RCC_AHBPeriphClockCmd(LSM303DLHC_DRDY_GPIO_CLK, ENABLE);
	//
	//	GPIO_PinAFConfig(LSM303DLHC_I2C_SCK_GPIO_PORT, LSM303DLHC_I2C_SCK_SOURCE, LSM303DLHC_I2C_SCK_AF);
	//	GPIO_PinAFConfig(LSM303DLHC_I2C_SDA_GPIO_PORT, LSM303DLHC_I2C_SDA_SOURCE, LSM303DLHC_I2C_SDA_AF);
	//
	//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
	//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	//
	//	/* I2C SCK pin configuration */
	//	GPIO_InitStructure.GPIO_Pin = LSM303DLHC_I2C_SCK_PIN;
	//	GPIO_Init(LSM303DLHC_I2C_SCK_GPIO_PORT, &GPIO_InitStructure);
	//
	//	/* I2C SDA pin configuration */
	//	GPIO_InitStructure.GPIO_Pin =  LSM303DLHC_I2C_SDA_PIN;
	//	GPIO_Init(LSM303DLHC_I2C_SDA_GPIO_PORT, &GPIO_InitStructure);
	//
	//	/* Mems DRDY */
	//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
	//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
	//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	//
	//	/* Mems DRDY pin configuration */
	//	GPIO_InitStructure.GPIO_Pin = LSM303DLHC_DRDY_PIN;
	//	GPIO_Init(LSM303DLHC_DRDY_GPIO_PORT, &GPIO_InitStructure);
	//
	//	/* Connect EXTI Line to Mems DRDY Pin */
	//	SYSCFG_EXTILineConfig(LSM303DLHC_DRDY_EXTI_PORT_SOURCE, LSM303DLHC_DRDY_EXTI_PIN_SOURCE);
	//
	//	EXTI_InitStructure.EXTI_Line = LSM303DLHC_DRDY_EXTI_LINE;
	//	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	//	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
	//	EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	//
	//	EXTI_Init(&EXTI_InitStructure);
	//
	//	/* I2C configuration -------------------------------------------------------*/
	//	I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
	//	I2C_InitStructure.I2C_AnalogFilter = I2C_AnalogFilter_Enable;
	//	I2C_InitStructure.I2C_DigitalFilter = 0x00;
	//	I2C_InitStructure.I2C_OwnAddress1 = 0x00;
	//	I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
	//	I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
	//	I2C_InitStructure.I2C_Timing = 0x00902025;
	//
	//	/* Apply LSM303DLHC_I2C configuration after enabling it */
	//	I2C_Init(LSM303DLHC_I2C, &I2C_InitStructure);
	//
	//	/* LSM303DLHC_I2C Peripheral Enable */
	//	I2C_Cmd(LSM303DLHC_I2C, ENABLE);
	//
	//	/* Configure GPIO PINs to detect Interrupts */
	//	GPIO_InitStructure.GPIO_Pin = LSM303DLHC_I2C_INT1_PIN;
	//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
	//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
	//	GPIO_Init(LSM303DLHC_I2C_INT1_GPIO_PORT, &GPIO_InitStructure);
	//
	//	GPIO_InitStructure.GPIO_Pin = LSM303DLHC_I2C_INT2_PIN;
	//	GPIO_Init(LSM303DLHC_I2C_INT2_GPIO_PORT, &GPIO_InitStructure);
}
